# horse-bet-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: bet_eval_odds_log1p_plus_popularity.toml  bet_logic_only_dual_market_logreg_mainline_2023_2025.toml  bet_set_diff_dual_market_vs_headcount_2024_2025.toml  calibration_drift_reference_strategy_dual_market_logreg_2023_2025.toml  dataset_dual_market_is_place_2024_2025.toml  dataset_is_place.toml  dataset_market_plus_workout_minimal_is_place.toml  dataset_minimal.toml  dataset_odds_only_is_place.toml  dataset_odds_only_plus_popularity_is_place.toml  dataset_odds_only_plus_popularity_is_place_2024_2025.toml  default.toml  mainline_block_sensitivity_dual_market_logreg_2023_2025.toml  model_dual_market_derived_feature_comparison_2024_2025.toml  model_dual_market_histgb_ensemble_comparison_2024_2025.toml  model_dual_market_histgb_small_robustness_2024_2025.toml  model_dual_market_model_family_comparison_2024_2025.toml  model_dual_market_reference_comparison_2023_2025.toml  model_dual_market_small_market_feature_comparison_2024_2025.toml  model_market_feature_comparison_2024_2025.toml  model_market_plus_workout_minimal_logreg_is_place.toml  model_odds_log1p_logreg_is_place.toml  model_odds_log1p_plus_popularity_logreg_is_place.toml  model_odds_only_logreg_is_place.toml  model_odds_only_plus_popularity_logreg_is_place.toml  model_single_win_market_comparison_2024_2025.toml  place_backtest_edge_normalized_odds_log1p_plus_popularity.toml  place_backtest_edge_odds_log1p_plus_popularity.toml  place_backtest_edge_oz_place_basis_dual_market_robustness_2023_2025.toml  place_backtest_edge_oz_place_basis_dual_market_robustness_2024_2025.toml  place_backtest_edge_oz_place_basis_odds_log1p_plus_popularity.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_fine_sweep.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_2_0_3_0.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_select_on_aggregate_valid_rollforward_retrain.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_select_on_aggregate_valid_rollforward_retrain_2024_2025.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_select_on_valid.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_select_on_valid_rollforward.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_select_on_valid_rollforward_retrain.toml  place_backtest_edge_oz_place_basis_odds_popularity_1_3_place_basis_band_sweep.toml  place_backtest_edge_oz_place_basis_odds_popularity_band_rollforward.toml  (+49 more)
docs/: mainline_reference_runbook.md  staging_contract.md
scripts/: live_inference_score.py  run_checks.sh
tests/: test_bet_logic_only.py  test_bet_set_diff.py  test_calibration_drift.py  test_config.py  test_dataset.py  test_evaluation.py  test_feature_registry.py  test_ingest.py  test_jrdb_auto_ingestion.py  test_jrdb_oz_pre_race_adapter.py  test_jrdb_tyb_oz_pre_race_adapter.py  test_mainline_block_sensitivity.py  test_model.py  test_model_comparison.py  test_place_backtest.py  test_place_forward_raw_snapshot_intake.py  test_place_forward_raw_snapshot_prepare.py  test_place_forward_snapshot_bridge.py  test_place_forward_test_contracts.py  test_place_forward_test_reconciliation.py  test_place_forward_test_result_db_availability.py  test_place_forward_test_runner.py  test_place_forward_test_scaffold.py  test_proxy_live_inference.py  test_ranking_rule_rollforward.py  test_ranking_score_diff.py  test_reference_bankroll_simulation.py  test_reference_bankroll_simulation_uncertainty.py  test_reference_guard_compare.py  test_reference_label_guard_compare.py  test_reference_label_guard_null_test.py  test_reference_label_guard_uncertainty.py  test_reference_pack.py  test_reference_per_race_cap_drawdown_compare.py  (+16 more)
(+142 files in other folders)
